--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -22,7 +22,9 @@ loguru==0.6.0
 makefun==1.15.0
 motor==3.1.1
 multidict==6.0.2
+numpy==1.23.5
 packaging==21.3
+pandas==1.5.2
 passlib==1.7.4
 pluggy==1.0.0
 pycparser==2.21
@@ -31,7 +33,9 @@ PyJWT==2.6.0
 pymongo==4.3.3
 pyparsing==3.0.9
 pytest==7.2.0
+python-dateutil==2.8.2
 python-multipart==0.0.5
+pytz==2022.6
 redis==4.3.5
 rfc3986==1.5.0
 six==1.16.0
